--- a/NoteAppDAT/src/main/webapp/index.html
+++ b/NoteAppDAT/src/main/webapp/index.html
@@ -5,6 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hell World!</h1>
+        <div class="header-div">
+            
+        </div>
     </body>
 </html>
