--- a/NoteAppDAT/src/main/webapp/index.xhtml
+++ b/NoteAppDAT/src/main/webapp/index.xhtml
@@ -1,15 +1,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:f="http://java.sun.com/jsf/core"
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:p="http://primefaces.org/ui">
  
-     <h:head>
- 
-     </h:head>
+     <h:form>
+            <p:dataTable value="#{noteBackingBean.notes}" var="note"  paginator="true" rows="10">
+                    <p:column headerText="Author" sortBy="#{note.owner.name}">#{note.owner.name}</p:column>
+                    <p:column headerText="Title" sortBy="#{note.title}">#{note.title}</p:column>
+            </p:dataTable>
+     </h:form>
  
      <h:body>
- 
-         <p:spinner />
- 
+         <p>body</p>
      </h:body>
+      
 </html>
