--- a/NoteAppDAT/src/main/webapp/index.xhtml
+++ b/NoteAppDAT/src/main/webapp/index.xhtml
@@ -69,7 +69,7 @@
          
     <p:dialog header="Add event" widgetVar="addEventDialog" modal="false" draggable="false" resizable="false" responsive="true" closeOnEscape="true">
         <h:form>
-            <p:panelGrid id="formPanel" columns="4">
+            <p:panelGrid id="formPanel" columns="2">
                 <p:outputLabel for="noteName" value="Name"/>
                 <p:inputText id="noteName" value="#{noteBackingBean.noteName}" autocomplete="off"/>
                 <p:outputLabel for="noteText" value="Text"/>
@@ -79,11 +79,12 @@
                 <p:outputLabel for="timeonly" value="Time"/>
                 <p:datePicker id="timeonly" timeOnly="true" pattern="HH:mm" autocomplete="off"/>
             </p:panelGrid>
-                <p:commandButton value="addCard" action="#{noteBackingBean.createNote}" update="mainForm" process="@form" oncomplete="PF('addEventDialog').hide();">
-                </p:commandButton>
-                <p:commandButton value="resetForm">
+            <div class="button-footer">
+                <p:commandButton styleClass="customButton" value="Add" action="#{noteBackingBean.createNote}" update="mainForm" process="@form" oncomplete="PF('addEventDialog').hide();"/>
+                <p:commandButton styleClass="customButton" value="Reset">
                     <p:ajax update="formPanel" resetValues="true"/>
                 </p:commandButton>
+            </div>
         </h:form>
     </p:dialog>
          
