--- a/NoteAppDAT/src/main/webapp/welcome.xhtml
+++ b/NoteAppDAT/src/main/webapp/welcome.xhtml
@@ -84,8 +84,8 @@
                     So what are you waiting for? Sign up and get productive!
                 </h4>
                 <div class="basic-grid card-example center">
-                    <p:commandButton value="Sign Up" type="button" style="log-sign-buttons" onclick="PF('SignUp').show()"/>
-                    <p:commandButton value="Login" type="button" style="log-sign-buttons" onclick="PF('Login').show()" />
+                    <p:commandButton value="Sign Up" type="button" styleClass="customButton" onclick="PF('SignUp').show()"/>
+                    <p:commandButton value="Login" type="button" styleClass="customButton" onclick="PF('Login').show()" />
                 </div>
                 
                 <p:dialog header="Header" widgetVar="Login" minHeight="40" width="350" showEffect="fade" modal="true">
@@ -96,7 +96,7 @@
                             <hr />
                             Password:
                             <p:inputText value="#{userBean.password}" placeholder="Password"/>
-                            <p:commandButton value="Log in" action="#{loginControllerBean.onLogin}"/>
+                            <p:commandButton styleClass="customButton" value="Login" action="#{loginControllerBean.onLogin}"/>
                         </h:form>
                     </p>
                 </p:dialog>
