Fix for adding text (again)

--- a/NoteAppDAT/src/main/webapp/welcome.xhtml
+++ b/NoteAppDAT/src/main/webapp/welcome.xhtml
@@ -95,7 +95,7 @@
                             <p:inputText value="#{userBean.email}" placeholder="Email"/>
                             <hr />
                             Password:
-                            <p:inputText value="#{userBean.password}" placeholder="Password"/>
+                            <p:inputText value="#{userBean.password}" type="password" placeholder="Password"/>
                             <p:commandButton styleClass="customButton" value="Login" action="#{loginControllerBean.onLogin}"/>
                         </h:form>
                     </p>
