New submit button

--- a/NoteAppDAT/src/main/webapp/welcome.xhtml
+++ b/NoteAppDAT/src/main/webapp/welcome.xhtml
@@ -111,6 +111,8 @@
                         <hr />
                         Password:
                         <input type="password" value="" />
+                        <hr />
+                        <h:commandButton id="submit" action="success" value="Submit"/>
                     </p>
                 </p:dialog>
                 
