New simpler calendar, before switch

--- a/NoteAppDAT/src/main/webapp/calendar.xhtml
+++ b/NoteAppDAT/src/main/webapp/calendar.xhtml
@@ -83,10 +83,10 @@
 
 
         <h:form id="mainForm">
+            
+            <p>MAIN FORM TEST</p>
 
-
-
-            <ui:repeat var="year" value="#{calendarBean.eventsInPeriod.years}">
+            <ui:repeat var="year" value="#{calendarBean.events}">
                 <div class="card">
                     <p>#{year.time}</p>
 
