--- a/NoteAppDAT/src/main/webapp/welcome.xhtml
+++ b/NoteAppDAT/src/main/webapp/welcome.xhtml
@@ -100,7 +100,7 @@
                 <p:dialog header="Header" widgetVar="SignUp" minHeight="40" width="350" showEffect="fade" modal="true">
                     <p class="p-m-0">
                         Email:
-                        <input type="text" value="" />
+                        <p:inputText value="#{userServiceIdentityStore.email}" placeholder="Email"/>
                         <hr />
                         Username:
                         <input type="text" value="" />
