--- a/NoteAppDAT/src/main/webapp/calendar.xhtml
+++ b/NoteAppDAT/src/main/webapp/calendar.xhtml
@@ -8,7 +8,7 @@
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
     <h:head>
-        <title>Start Page</title>
+        <title>here you can make your notes, hope it works out good for you because we will not fix any bugs</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces"/>
 
